wal-macros/tests/rsx_macro_tests/attributes/event_attributes_fail.stderr
error: expected `=`
 --> tests/rsx_macro_tests/attributes/event_attributes_fail.rs:5:25
  |
5 |     rsx! { <div onclick></div> };
  |                         ^

error: Expected a literal or an expression block
 --> tests/rsx_macro_tests/attributes/event_attributes_fail.rs:6:26
  |
6 |     rsx! { <div onclick=></div> };
  |                          ^

error: expected `=`
 --> tests/rsx_macro_tests/attributes/event_attributes_fail.rs:7:26
  |
7 |     rsx! { <div onclick {Callback::new(|_event: wal::events::MouseEvent)| {}}></div> };
  |                          ^

error: Duplicate event attribute `onclick`
  --> tests/rsx_macro_tests/attributes/event_attributes_fail.rs:11:13
   |
11 |             onclick={Callback::new(|_event: wal::events::MouseEvent| {})}>
   |             ^^^^^^^

error: Expected a literal or an expression block
  --> tests/rsx_macro_tests/attributes/event_attributes_fail.rs:14:27
   |
14 |     rsx! { <div onclick= ondblclick={Callback::new(|_event: wal::events::MouseEvent| {})}></div> };
   |                           ^^^^^^^^^^

error: Expected an expression block for event attribute `onclick`
  --> tests/rsx_macro_tests/attributes/event_attributes_fail.rs:17:18
   |
17 |     rsx! { <div onclick="value"></div> };
   |                  ^^^^^^^

error: Expected a non-empty expression block
  --> tests/rsx_macro_tests/attributes/event_attributes_fail.rs:18:26
   |
18 |     rsx! { <div onclick={}></div> };
   |                          ^^

error[E0308]: mismatched types
  --> tests/rsx_macro_tests/attributes/event_attributes_fail.rs:15:27
   |
15 |     rsx! { <div onclick={Callback::new(|_event: wal::events::Event| {})}></div> };
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Callback<MouseEvent>`, found `Callback<Event>`
   |
   = note: expected struct `Callback<MouseEvent>`
              found struct `Callback<Event>`

error[E0308]: mismatched types
  --> tests/rsx_macro_tests/attributes/event_attributes_fail.rs:16:27
   |
16 |     rsx! { <div onclick={Callback::new(|_event: wal::events::DragEvent| {})}></div> };
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Callback<MouseEvent>`, found `Callback<DragEvent>`
   |
   = note: expected struct `Callback<MouseEvent>`
              found struct `Callback<DragEvent>`

error[E0308]: mismatched types
  --> tests/rsx_macro_tests/attributes/event_attributes_fail.rs:19:27
   |
19 |     rsx! { <div onclick={"value"}></div> };
   |                           ^^^^^^^ expected `Callback<MouseEvent>`, found `&str`
   |
   = note: expected struct `Callback<MouseEvent>`
           found reference `&'static str`
